--- a/style.css
+++ b/style.css
@@ -5,58 +5,202 @@
 }
 
 body {
-  width: 100%;
+  width: 100vw;
+  height: 100vh;
+  background-color: black;
+  position: relative;
 }
 
+header,
+footer {
+  font-family: "Playfair Display", serif;
+  font-optical-sizing: auto;
+  font-weight: 300;
+  font-style: normal;
+  font-size: larger;
+}
 .up {
-  margin-left: 70%;
-  margin-top: 2%;
+  position: absolute;
+  left: 70%;
+  top: 1%;
   background-color: white;
-  width: 60%;
-  height: 10%;
+  width: 28em;
+  height: 4em;
 }
 
 .rightside {
-  margin-left: 97%;
-  margin-top: 5%;
+  position: absolute;
+  left: 94.5%;
+  top: 8.5%;
   background-color: white;
-  width: 10%;
-  height: 40%;
+  width: 4.4em;
+  height: 22em;
 }
 
-.navbarup {
+.navbarup,
+.navbardown {
   display: flex;
   text-transform: uppercase;
   list-style: none;
-
-  .normal {
-    padding-left: 150px;
-    text-decoration: underline;
-    text-decoration-thickness: 4px;
-    text-underline-offset: 8px;
-    text-decoration-color: rgb(147, 67, 221);
-  }
 }
+
+/*a {
+  
+}*/
+
+.normal {
+  padding: 24px 24px 0 70px;
+}
+
+.language {
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+  font-size: large;
+  padding: 10px;
+}
+
+.de {
+  background-color: black;
+  color: white;
+  text-decoration: none;
+  cursor: cell;
+  font-weight: 600;
+}
+
+.en {
+  border: 2px solid black;
+  text-decoration: none;
+  color: black;
+  cursor: cell;
+}
+/*.home {
+  text-decoration: underline;
+  text-decoration-thickness: 4px;
+  text-underline-offset: 8px;
+  text-decoration-color: rgb(147, 67, 221);
+}*/
 
 .navbarright {
   text-transform: uppercase;
   list-style: none;
+}
 
-  .vertical {
-    padding-bottom: 150px;
-    writing-mode: vertical-lr;
-    text-decoration: underline;
-    text-decoration-thickness: 4px;
-    text-underline-offset: 8px;
-    text-decoration-color: rgb(147, 67, 221);
+.vertical {
+  padding: 80px 0 20px 38px;
+  /*writing-mode: vertical-lr;*/
+  border: 1px solid red;
+}
+
+section {
+  display: flex;
+  justify-content: center;
+  position: relative;
+  top: 120px;
+  left: 50px;
+}
+.blacktext {
+  padding-top: 270px;
+  text-align: center;
+  width: 40vw;
+  height: 80vh;
+  color: white;
+
+  .gloria {
+    font-family: "Gloria Hallelujah", cursive;
+    font-weight: 400;
+    font-size: 1.8rem;
+    font-style: normal;
   }
 }
 
-main {
-  display: flex;
-}
 .white {
-  width: 50%;
+  width: 2vw;
   height: 80vh;
-  background-color: black;
+  background-color: white;
+  rotate: -6deg;
+}
+
+.blackpicture {
+  width: 40vw;
+  height: 80vh;
+}
+
+.blackpicture img {
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+}
+
+.down {
+  position: absolute;
+  top: 90%;
+  left: 1%;
+  background-color: white;
+  width: 28em;
+  height: 4em;
+}
+
+.navbardown .normal {
+  padding-top: 20px;
+  padding-left: 130px;
+}
+
+.leftside {
+  position: absolute;
+  left: 1em;
+  top: 24em;
+  background-color: white;
+  width: 4.5em;
+  height: 22em;
+}
+
+.vertical2 {
+  display: block;
+}
+.fa-brands {
+  padding-left: 28px;
+  padding-top: 60px;
+  font-size: 36px;
+  cursor: cell;
+}
+
+.nav_link {
+  text-decoration: none;
+  color: black;
+  opacity: 0.8;
+  cursor: cell;
+  font-weight: 600;
+  position: relative;
+  transition: all 0.4s;
+  /*transform: scaleX(0);*/
+}
+
+.nav_link:hover {
+  opacity: 1.2;
+}
+
+.nav_link::after {
+  content: "";
+  height: 4px;
+  width: 100%;
+  background: rgb(156, 31, 156);
+  position: absolute;
+  left: 0;
+  bottom: -8px;
+  opacity: 0;
+  transition: all 0.2s;
+  pointer-events: none;
+}
+
+.nav_link:hover::after,
+.nav_link:focus::after
+/*.nav_link:current::after*/ {
+  opacity: 1;
+}
+
+@media (max-width: 600px) {
+  main {
+    display: block;
+  }
 }
