--- a/style.css
+++ b/style.css
@@ -74,12 +74,6 @@ footer {
   color: black;
   cursor: cell;
 }
-/*.home {
-  text-decoration: underline;
-  text-decoration-thickness: 4px;
-  text-underline-offset: 8px;
-  text-decoration-color: rgb(147, 67, 221);
-}*/
 
 .navbarright {
   text-transform: uppercase;
@@ -88,8 +82,7 @@ footer {
 
 .vertical {
   padding: 80px 0 20px 38px;
-  /*writing-mode: vertical-lr;*/
-  border: 1px solid red;
+  writing-mode: vertical-lr;
 }
 
 section {
@@ -97,7 +90,8 @@ section {
   justify-content: center;
   position: relative;
   top: 120px;
-  left: 50px;
+  left: 220px;
+  width: 80%;
 }
 .blacktext {
   padding-top: 270px;
@@ -105,13 +99,13 @@ section {
   width: 40vw;
   height: 80vh;
   color: white;
+}
 
-  .gloria {
-    font-family: "Gloria Hallelujah", cursive;
-    font-weight: 400;
-    font-size: 1.8rem;
-    font-style: normal;
-  }
+.gloria {
+  font-family: "Gloria Hallelujah", cursive;
+  font-weight: 400;
+  font-size: 1.8rem;
+  font-style: normal;
 }
 
 .white {
@@ -165,7 +159,8 @@ section {
   cursor: cell;
 }
 
-.nav_link {
+.nav_link,
+.nav_link_side {
   text-decoration: none;
   color: black;
   opacity: 0.8;
@@ -176,10 +171,24 @@ section {
   /*transform: scaleX(0);*/
 }
 
-.nav_link:hover {
+.nav_link:hover,
+.nav_link_side:hover {
   opacity: 1.2;
 }
 
+.nav_link_side::after {
+  rotate: (90deg);
+  content: "";
+  height: 4px;
+  width: 100%;
+  background: rgb(156, 31, 156);
+  position: absolute;
+  left: 0;
+  bottom: -8px;
+  opacity: 0;
+  transition: all 0.2s;
+  pointer-events: none;
+}
 .nav_link::after {
   content: "";
   height: 4px;
@@ -197,6 +206,50 @@ section {
 .nav_link:focus::after
 /*.nav_link:current::after*/ {
   opacity: 1;
+}
+
+.aboutside {
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+}
+.abouttext {
+  width: 100%;
+  height: 100%;
+  color: white;
+}
+
+.violett {
+  padding-right: 12px;
+  font-family: "Gloria Hallelujah", cursive;
+  font-weight: 600;
+  font-size: 3rem;
+  font-style: normal;
+  color: rgb(201, 97, 201);
+}
+
+.firacoda {
+  font-family: "Fira Code", monospace;
+  font-optical-sizing: auto;
+  font-weight: 600;
+  font-size: 2.5rem;
+  font-style: normal;
+  color: red;
+}
+.aboutpic {
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+}
+
+article {
+  display: block;
+
+  p {
+    padding: 120px 100px 40px 0;
+    text-align: left;
+    line-height: 80px;
+  }
 }
 
 @media (max-width: 600px) {
